Extend to variable setting of number of dices and range

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+obj/Debug/DiceBlaster.pdb
+obj/Debug/DiceBlaster.pdb
+bin/Debug/DiceBlaster.pdb
+bin/Debug/DiceBlaster.exe
